--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,7 +40,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mysql-connector-java-8.0.25.jar}
+    ${file.reference.mysql-connector-java-8.0.25.jar}:\
+    ${libs.JasperReport.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
