--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SistemaDeInformacion
 excludes=
+file.reference.commons-beanutils-1.8.3.jar=C:\\Users\\Facundo\\Desktop\\commons-beanutils-1.8.3.jar
 file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.25.jar=C:\\Users\\Facundo\\Desktop\\Proyectos\\JasperReport\\Librerias de JasperReport\\mysql-connector-java-8.0.25\\mysql-connector-java-8.0.25.jar
 includes=**
@@ -41,7 +42,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mysql-connector-java-8.0.25.jar}:\
-    ${libs.JasperReport.classpath}
+    ${libs.JasperReport.classpath}:\
+    ${file.reference.commons-beanutils-1.8.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
