--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ excludes=
 file.reference.commons-beanutils-1.8.3.jar=C:\\Users\\Facundo\\Desktop\\commons-beanutils-1.8.3.jar
 file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.25.jar=C:\\Users\\Facundo\\Desktop\\Proyectos\\JasperReport\\Librerias de JasperReport\\mysql-connector-java-8.0.25\\mysql-connector-java-8.0.25.jar
+file.reference.poi-3.9.jar=C:\\Users\\Facundo\\Desktop\\Work\\poi-3.9.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -43,7 +44,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mysql-connector-java-8.0.25.jar}:\
     ${libs.JasperReport.classpath}:\
-    ${file.reference.commons-beanutils-1.8.3.jar}
+    ${file.reference.commons-beanutils-1.8.3.jar}:\
+    ${file.reference.poi-3.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
