--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -15,8 +15,9 @@ file.reference.mysql-connector-java-8.0.25.jar=C:\\Users\\Facundo\\Desktop\\Work
 file.reference.mysql-connector-java-8.0.25.jar-1=C:\\Users\\Facundo\\Desktop\\Work\\JasperReport\\Librerias de JasperReport\\mysql-connector-java-8.0.25\\mysql-connector-java-8.0.25.jar
 file.reference.poi-3.9.jar=C:\\Users\\Facundo\\Desktop\\Work\\poi-3.9.jar
 file.reference.poi-3.9.jar-1=C:\\Users\\Facundo\\Desktop\\Work\\poi-3.9.jar
-file.reference.swingx-all-1.6.4.jar=C:\\Users\\Facundo\\Desktop\\swingx-all-1.6.4.jar
-file.reference.swingx-all-1.6.4.jar-1=C:\\Users\\Facundo\\Desktop\\swingx-all-1.6.4.jar
+file.reference.swingx-all-1.6.4.jar=C:\\Users\\Facundo\\Desktop\\Work\\Library Find Filter ComboBox\\swingx-all-1.6.4.jar
+file.reference.swingx-autocomplete-1.6.5-1.jar=C:\\Users\\Facundo\\Desktop\\Work\\swingx-autocomplete-1.6.5-1.jar
+file.reference.swingx-common-1.6.5-1.jar=C:\\Users\\Facundo\\Desktop\\Work\\swingx-common-1.6.5-1.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
