--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,7 +51,8 @@ file.reference.org-jdesktop-layout.jar=C:\\Users\\Facundo\\Desktop\\org-jdesktop
 file.reference.poi-3.9.jar=C:\\Users\\Facundo\\Desktop\\Work\\poi-3.9.jar
 file.reference.poi-3.9.jar-1=C:\\Users\\Facundo\\Downloads\\A GUARDAR\\A GUARDAR\\Work\\poi-3.9.jar
 file.reference.swingx-all-1.6.4.jar=C:\\Users\\Facundo\\Desktop\\Work\\Library Find Filter ComboBox\\swingx-all-1.6.4.jar
-file.reference.swingx-all-1.6.4.jar-1=C:\\Users\\Facundo\\Downloads\\A GUARDAR\\A GUARDAR\\Work\\Library Find Filter ComboBox\\swingx-all-1.6.4.jar
+file.reference.swingx-autocomplete-1.6.5-1.jar=C:\\Users\\Facundo\\Desktop\\swingx-autocomplete-1.6.5-1.jar
+file.reference.swingx-common-1.6.5-1.jar=C:\\Users\\Facundo\\Desktop\\swingx-common-1.6.5-1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -70,9 +71,10 @@ javac.classpath=\
     ${file.reference.itext-pdfa-5.5.4.jar}:\
     ${file.reference.itextpdf-5.5.4.jar}:\
     ${file.reference.jasperreports-6.0.0.jar}:\
-    ${file.reference.swingx-all-1.6.4.jar-1}:\
     ${file.reference.poi-3.9.jar-1}:\
-    ${file.reference.org-jdesktop-layout.jar}
+    ${file.reference.org-jdesktop-layout.jar}:\
+    ${file.reference.swingx-autocomplete-1.6.5-1.jar}:\
+    ${file.reference.swingx-common-1.6.5-1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
